--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "apiresnodesql",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node .",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
