--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1"
   },
   "devDependencies": {
